--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url ('https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap');
 
 :root {
-    --background: rgb(255, 233,111);
+    --background: rgb(255, 233, 111);
     --grey: rgb(51, 51, 51);
 }
 
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 0%;
     box-sizing: border-box;
-    font-family: 'Caveat',cursive;
+    font-family: 'Caveat', cursive;
 }
 
 body {
@@ -27,7 +27,7 @@ header {
     color: white;
 }
 
-h1{
+h1 {
     margin: 0.5rem;
 }
 
@@ -35,8 +35,9 @@ main {
     margin: 1rem;
 }
 
-#txt-input, #output {
-    margin:auto;
+#txt-input,
+#output {
+    margin: auto;
     display: block;
     padding: 1rem;
     width: 80%;
@@ -57,7 +58,7 @@ button {
     text-transform: uppercase;
     border-radius: 0.3rem;
     background-color: var(--grey);
-    color: whitesmoke;
+    color: white;
     border: none;
     outline: none;
     cursor: pointer;
@@ -67,12 +68,13 @@ footer {
     margin-top: auto;
     width: 100%;
     background-color: var(--grey);
-    color: whitesmoke;
+    color: white;
     text-align: center;
     font-size: 1.5rem;
     padding: 1rem;
 }
 
-fooetr a, .github a {
-    color: whitesmoke;
+fooetr a,
+.github a {
+    color: inherit;
 }
